# simplex-method-solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: simplex_solver.h
src/: simplex.cpp  simplex_solver.cpp
tests/: simplex_tests.cpp
